# agent-skills

./: .gitignore  AUDIT.md  README.md  bug-hunt.md  cloudflare-durable-objects.md  exa-deep-research.md
_shared/gh-triage/: pyproject.toml
_shared/gh-triage/gh_triage/: __init__.py  cli.py  fetch_issues.py  fetch_prs.py  github.py
_shared/gh-triage/scripts/: gh-issue-details  gh-issues  gh-pr-context  gh-pr-details  gh-prs
_shared/github-pr-triage/: pyproject.toml
_shared/github-pr-triage/pr_triage/: __init__.py  cli.py  github.py  models.py
_shared/github-pr-triage/scripts/: fetch-pr-context-deep.sh  fetch-pr-details.sh  fetch-pr-triage.sh
_shared/jules-api/: jules-lib.sh
assign-claude/: SKILL.md
assign-claude/scripts/: launch-cloud-fanout.sh
assign-codex-fanin/: SKILL.md
assign-codex-fanin/scripts/: collect-cloud-artifacts.py  wait-for-fanin.py
assign-codex-fanin/templates/: synthesis-outline.md
assign-codex-fanout/: SKILL.md
assign-codex-fanout/scripts/: launch-cloud-fanout.py
assign-codex-fanout/templates/: task-workstream-prompt.md
assign-copilot/: SKILL.md
assign-copilot/scripts/: assign-to-copilot.sh
assign-jules/: SKILL.md  skill.md
assign-jules/scripts/: archive.sh  assign.sh  (+4 more)
bench-compare/: SKILL.md
bug-hunt/: SKILL.md  skill.md
burning-down-work-units/: SKILL.md
cloudflare-durable-objects/: SKILL.md
find-stale-issues/: SKILL.md
follow-the-pr/: SKILL.md
formal-coverage-audit/: SKILL.md
go-perf/: SKILL.md
kani/: SKILL.md
kani-proof-audit/: SKILL.md
make-into-pr/: SKILL.md
organize-meta-issues/: SKILL.md
organize-work-items/: SKILL.md
playwright-cli/: SKILL.md
playwright-e2e/: SKILL.md
pr-triage/: SKILL.md
proptest/: SKILL.md
refresh-yourself/: SKILL.md
repo-onboard/: SKILL.md
research/: SKILL.md
resolve-pr-threads/: SKILL.md
sweeper/: SKILL.md
tla-audit/: SKILL.md
transcript-audit/: SKILL.md
web-session/: SKILL.md
workos/: SKILL.md
workos-widgets/: SKILL.md
(+32 files in other folders)
