[project]
name = "gh-triage"
version = "0.1.0"
description = "Unified GitHub issue and PR triage with semantic similarity"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "githubkit>=0.11.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[project.scripts]
gh-triage = "gh_triage.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gh_triage"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "sentence-transformers>=3.0.0",
]
